--- a/app/src/main/res/layout/main_app_bar.xml
+++ b/app/src/main/res/layout/main_app_bar.xml
@@ -11,14 +11,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Mitms24Theme.AppBarOverlay">
+        android:theme="@style/BoilingFrogsTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Mitms24Theme.PopupOverlay"/>
+            app:popupTheme="@style/BoilingFrogsTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
