navigation drawer refactored to not use custom listitem

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,29 +13,13 @@
         layout="@layout/main_app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:paddingTop="@dimen/drawer_top_padding">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/drawer_separator_height"
-            android:background="@color/separatorColorDrawer"/>
-
-        <ListView
-            android:id="@+id/drawer_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:choiceMode="singleChoice"
-            android:divider="@color/separatorColorDrawer"
-            android:dividerHeight="@dimen/drawer_separator_height"
-            android:layout_marginTop="@dimen/drawer_separator_height"/>
-
-    </android.support.design.widget.NavigationView>
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_main" />
 
 </android.support.v4.widget.DrawerLayout>
