--- a/app/src/main/res/menu/drawer_main.xml
+++ b/app/src/main/res/menu/drawer_main.xml
@@ -5,7 +5,8 @@
         <item
             android:id="@+id/nav_schedule"
             android:icon="@mipmap/ic_launcher"
-            android:title="@string/drawer_item_schedule" />
+            android:title="@string/drawer_item_schedule"
+            android:checked="true"/>
         <item
             android:id="@+id/nav_speakers"
             android:icon="@mipmap/ic_launcher"
