--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -20,6 +20,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer_main" />
+        app:menu="@menu/drawer_main"
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/red"
+        app:itemBackground="@drawable/drawer_item_background_selector"/>
 
 </android.support.v4.widget.DrawerLayout>
