--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,7 +22,7 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_main"
         app:itemTextColor="@color/white"
-        app:itemIconTint="@color/red"
+        app:itemIconTint="@color/drawer_icon_tint_selector"
         app:itemBackground="@drawable/drawer_item_background_selector"/>
 
 </android.support.v4.widget.DrawerLayout>
