--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#CA3538</color>
     <color name="colorPrimaryDark">#FFFB00</color>
-    <color name="colorPrimaryPressed">#FFFB00</color>
-    <color name="colorAccent">#FFFB00</color>
-    <color name="colorAccentPressed">#FFFB00</color>
+    <color name="colorPrimaryPressed">#1AFF00</color>
+    <color name="colorAccent">#FBFBFB</color>
+    <color name="colorAccentPressed">#00FFFB</color>
     <color name="colorWindowBackground">#252525</color>
 
     <color name="black">#0D1D27</color>
