--- a/app/src/main/res/layout/fragment_schedule_slot.xml
+++ b/app/src/main/res/layout/fragment_schedule_slot.xml
@@ -5,6 +5,13 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:footerDividersEnabled="false"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideInset"
+        android:overScrollFooter="@android:color/transparent"
+        android:scrollbars="none"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1px"/>
 
 </LinearLayout>
