list related code moved to base listFragment class

--- a/app/src/main/res/layout/list_item_model.xml
+++ b/app/src/main/res/layout/list_item_model.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.panoprogramowanie.boilingfrogs.ui.view.ListItemModelView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.panoprogramowanie.boilingfrogs.ui.list.ListItemModelView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -43,4 +43,4 @@
         android:layout_toRightOf="@+id/avatar_wrapper"
         android:maxLines="1"
         android:textColor="@color/gray" />
-</com.panoprogramowanie.boilingfrogs.ui.view.ListItemModelView>
+</com.panoprogramowanie.boilingfrogs.ui.list.ListItemModelView>
