--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -47,24 +47,14 @@
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/speech_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:singleLine="false"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/speaker_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:singleLine="false"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -72,22 +62,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="false"
+                android:textColor="@color/dark_gray"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/speech_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:singleLine="false"
                 android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/speech_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="false"
+                android:drawableLeft="@drawable/ic_time"
+                android:drawablePadding="2dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="16sp"/>
+
             <TextView
                 android:id="@+id/speech_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:textSize="14sp"
+                android:textSize="16sp"
+                android:lineSpacingExtra="3dp"
                 android:singleLine="false"
                 android:textColor="@color/black" />
             <include
                 android:id="@+id/speaker_social"
                 layout="@layout/view_social"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"/>
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
