--- a/app/src/main/res/layout/speaker_activity.xml
+++ b/app/src/main/res/layout/speaker_activity.xml
@@ -49,20 +49,28 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/speaker_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:singleLine="false"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/speaker_occupation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:singleLine="false"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textColor="@color/dark_gray"
+                android:textSize="14sp"/>
             <TextView
                 android:id="@+id/speaker_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:lineSpacingExtra="3dp"
                 android:textSize="16sp"
                 android:singleLine="false"
@@ -71,7 +79,9 @@
                 android:id="@+id/speaker_social"
                 layout="@layout/view_social"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"/>
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
