--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="red">#CA3538</color>
     <color name="white">#FBFBFB</color>
 
+    <color name="transparent_gray">#226D797A</color>
+
     <color name="drawer_selected_background">#191919</color>
 
     <color name="textColor">#ffffff</color>
