--- a/app/src/main/res/menu/drawer_main.xml
+++ b/app/src/main/res/menu/drawer_main.xml
@@ -14,8 +14,7 @@
         <item
             android:id="@+id/nav_my_schedule"
             android:icon="@drawable/drawer_my_schedule"
-            android:title="@string/drawer_item_my_schedule"
-            android:visible="false" />
+            android:title="@string/drawer_item_my_schedule"/>
         <item
             android:id="@+id/nav_sponsors"
             android:icon="@drawable/drawer_sponsors"
