--- a/app/src/main/res/layout/list_item_break_slot.xml
+++ b/app/src/main/res/layout/list_item_break_slot.xml
@@ -2,27 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent_gray"
+    android:background="@color/my_schedule_empty_slot_bg"
+    android:orientation="horizontal"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:paddingRight="8dp"
     android:paddingLeft="8dp">
     <TextView
         android:id="@+id/speech_slot_time"
         android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:layout_centerVertical="true"
-        android:textColor="@color/black"
-        android:textStyle="normal"/>
+        android:layout_height="match_parent"
+        android:gravity="center|left"
+        android:layout_alignBottom="@+id/title"
+        android:layout_alignTop="@+id/title"
+        android:textColor="@color/my_schedule_empty_slot_time_text"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/speech_slot_time"
-        android:layout_alignParentRight="true"
-        android:gravity="center"
-        android:layout_centerVertical="true"
+        android:gravity="left"
         android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@+id/speech_slot_time"
+        android:textStyle="bold"
         android:maxLines="2"
-        android:textColor="@color/black"
+        android:textColor="@color/my_schedule_empty_slot_text"
         android:textSize="14sp" />
 </RelativeLayout>
