--- a/app/src/main/res/layout/list_item_speech_slot.xml
+++ b/app/src/main/res/layout/list_item_speech_slot.xml
@@ -1,53 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingLeft="8dp">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_toRightOf="@+id/speech_slot_time"
-        android:alpha="0.3"
-        android:scaleType="centerCrop"
-        android:id="@+id/photo"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/speech_slot_time"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
         android:layout_centerVertical="true"
         android:textColor="@color/black"
-        android:textStyle="normal"/>
-    <TextView
-        android:id="@+id/title"
+        android:textStyle="bold" />
+    </LinearLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/speech_slot_time"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:maxLines="2"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:padding="0dp"
+        app:cardBackgroundColor="@color/my_schedule_speaker_overlay"
+        app:cardPreventCornerOverlap="false"
+        app:cardCornerRadius="8dp"
+        app:contentPadding="0dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_toRightOf="@+id/speech_slot_time"
-        android:layout_above="@+id/empty_view"
-        android:maxLines="1"
-        android:textColor="@color/black" />
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/photo"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            app:riv_corner_radius="8dp"
+            app:riv_border_width="0dp"
+            android:scaleType="centerCrop" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/photo"
+            android:background="@drawable/my_schedule_speaker_overlay" />
 
-    <View
-        android:id = "@+id/empty_view"
-        android:layout_height = "8dp"
-        android:layout_width = "match_parent"
-        android:visibility="invisible"
-        android:layout_alignBottom="@+id/photo"
-        />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:maxLines="2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/empty_view"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="8dp"
+            android:maxLines="1"
+            android:textColor="@color/white" />
+
+        <View
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_alignBottom="@+id/photo"
+            android:visibility="invisible" />
     </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
