--- a/app/src/main/res/layout/list_item_speech_slot.xml
+++ b/app/src/main/res/layout/list_item_speech_slot.xml
@@ -12,13 +12,19 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/speech_slot_time"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/speech_slot_time"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/speech_slot_path"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="12sp"
+            android:textColor="@color/gray"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -76,7 +82,7 @@
         <View
             android:id="@+id/empty_view"
             android:layout_width="match_parent"
-            android:layout_height="16dp"
+            android:layout_height="8dp"
             android:layout_alignBottom="@+id/photo"
             android:visibility="invisible" />
     </RelativeLayout>
