--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#CA3538</color>
-    <color name="colorPrimaryDark">#FFFB00</color>
+    <color name="colorPrimaryDark">#a42b2d</color>
     <color name="colorPrimaryPressed">#1AFF00</color>
     <color name="colorAccent">#FBFBFB</color>
     <color name="colorAccentPressed">#00FFFB</color>
