--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/drawer_header"
+        app:headerLayout="@layout/main_drawer_header"
         app:menu="@menu/drawer_main"
         app:itemTextColor="@color/white"
         app:itemIconTint="@color/drawer_icon_tint_selector"
