--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -99,7 +99,7 @@
                 android:textColor="@color/black" />
             <include
                 android:id="@+id/speaker_social"
-                layout="@layout/view_social"
+                layout="@layout/social_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
