--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -1,7 +1,9 @@
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="speech" type="com.panoprogramowanie.boilingfrogs.model.Speech"/>
+    </data>
 <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
@@ -74,6 +76,7 @@
                     android:layout_marginTop="8dp"
                     android:singleLine="false"
                     android:textColor="@color/black"
+                    android:text="@{speech.title}"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
 
@@ -116,3 +119,4 @@
             app:layout_anchor="@+id/appbar"
             app:layout_anchorGravity="bottom|right|end"/>
 </android.support.design.widget.CoordinatorLayout>
+</layout>
