--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -30,7 +30,9 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"/>
+                    app:layout_collapseMode="parallax"
+                    app:imageUrl="@{speaker.photoUrl}"
+                    app:placeholder="@{@drawable/avatar_placeholder}"/>
             <android.support.v7.widget.Toolbar
                     android:id="@+id/anim_toolbar"
                     android:layout_width="match_parent"
