--- a/app/src/main/res/layout/speech_slot_empty_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_empty_list_item.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="16dp"
+                android:background="@color/white"
                 android:paddingBottom="16dp">
             <TextView
                     android:id="@+id/title"
