--- a/app/src/main/res/drawable/list_divider.xml
+++ b/app/src/main/res/drawable/list_divider.xml
@@ -4,6 +4,7 @@
        android:insetRight="10dp">
     <shape android:shape="rectangle">
         <solid android:color="@color/gray"/>
+        <size android:height="1px"/>
     </shape>
 
 </inset>
