--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -2,16 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="match_parent"
               android:layout_height="match_parent" android:background="@color/white">
-    <ListView
-            android:id="@+id/listView"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:footerDividersEnabled="false"
             android:clipToPadding="false"
             android:scrollbarStyle="outsideInset"
             android:overScrollFooter="@android:color/transparent"
-            android:scrollbars="none"
-            android:divider="@drawable/list_divider"
-            android:dividerHeight="1px"/>
+            android:scrollbars="none"/>
 
 </LinearLayout>
