--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="dark_gray">#252525</color>
     <color name="gray">#6D797A</color>
     <color name="red">#CA3538</color>
+    <color name="overlay_red">#33CA3538</color>
     <color name="white">#FBFBFB</color>
 
     <color name="my_schedule_speaker_overlay">#cc8b1517</color>
