--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,5 @@
     <dimen name="drawer_separator_height">2dp</dimen>
     <dimen name="expanded_title_size">20sp</dimen>
 
-    <dimen name="rectangular_border_width">2dp</dimen>
+    <dimen name="rectangular_border_width">4px</dimen>
 </resources>
