--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,7 +15,8 @@
             android:paddingTop="16dp"
             android:paddingRight="8dp"
             android:paddingLeft="8dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+    android:background="@{itemModel.isClickable ? @drawable/listitem_background : @drawable/white_background}">
             <ImageView
                     android:id="@+id/avatar"
                     android:layout_width="64dp"
