nonempty speechslot margin adjusted

--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:padding="0dp"
             app:cardBackgroundColor="@color/my_schedule_speaker_overlay"
             app:cardPreventCornerOverlap="false"
