--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -4,16 +4,16 @@
         <variable name="speech" type="com.panoprogramowanie.boilingfrogs.model.Speech"/>
         <variable name="speaker" type="com.panoprogramowanie.boilingfrogs.model.Speaker"/>
     </data>
-    <android.support.design.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="false">
-        <android.support.design.widget.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            <android.support.design.widget.CollapsingToolbarLayout
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -30,15 +30,15 @@
                         app:layout_collapseMode="parallax"
                         app:imageUrl="@{speaker.photoUrl}"
                         app:placeholder="@{@drawable/avatar_placeholder}"/>
-                <android.support.v7.widget.Toolbar
+                <androidx.appcompat.widget.Toolbar
                         android:id="@+id/anim_toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
                         app:layout_collapseMode="pin"
                         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-            </android.support.design.widget.CollapsingToolbarLayout>
-        </android.support.design.widget.AppBarLayout>
-        <android.support.v4.widget.NestedScrollView
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.core.widget.NestedScrollView
                 android:id="@+id/contentScroll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -108,8 +108,8 @@
                         android:layout_marginBottom="16dp"
                         app:speaker="@{speaker}"/>
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-        <android.support.design.widget.FloatingActionButton
+        </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -117,5 +117,5 @@
                 android:clickable="true"
                 app:layout_anchor="@+id/appbar"
                 app:layout_anchorGravity="bottom|right|end"/>
-    </android.support.design.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
