--- a/app/src/main/res/layout/speech_slot_empty_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_empty_list_item.xml
@@ -26,7 +26,7 @@
                 android:textStyle="bold"
         android:text="@{speechSlot.timeLabel}"/>
     </LinearLayout>
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -60,6 +60,6 @@
                     android:layout_alignParentRight="true"
                     android:src="@drawable/angle_right"/>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
 </layout>
