--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -33,7 +33,7 @@
                 android:textColor="@color/gray"
                 app:speechLocationIfNonEmpty="@{speechSlot.favoriteOrOnlySpeech}"/>
     </LinearLayout>
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -99,6 +99,6 @@
                     android:layout_alignBottom="@+id/photo"
                     android:visibility="invisible"/>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
 </layout>
