--- a/app/src/main/res/drawable/speaker_avatar_background.xml
+++ b/app/src/main/res/drawable/speaker_avatar_background.xml
@@ -1,5 +1,6 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
-            android:startColor="#81b148"
-            android:endColor="#42ae91"/>
+        android:startColor="#81b148"
+        android:endColor="#42ae91" />
 </shape>
