--- a/app/src/main/res/layout/my_schedule_fragment.xml
+++ b/app/src/main/res/layout/my_schedule_fragment.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical" android:layout_width="match_parent"
-              android:layout_height="match_parent" android:background="@color/white">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:footerDividersEnabled="false"
-            android:clipToPadding="false"
-            android:overScrollMode="never"
-            android:scrollbarStyle="outsideInset"
-            android:overScrollFooter="@android:color/transparent"
-            android:scrollbars="none"
-            android:divider="@drawable/list_divider"
-            android:dividerHeight="1px"/>
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:footerDividersEnabled="false"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:scrollbarStyle="outsideInset"
+        android:overScrollFooter="@android:color/transparent"
+        android:scrollbars="none"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1px" />
 
 </LinearLayout>
