--- a/app/src/main/res/layout/social_view.xml
+++ b/app/src/main/res/layout/social_view.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
-        <variable name="speaker" type="com.panoprogramowanie.boilingfrogs.model.Speaker"/>
+
+        <variable
+            name="speaker"
+            type="com.panoprogramowanie.boilingfrogs.model.Speaker" />
     </data>
+
     <com.panoprogramowanie.boilingfrogs.ui.view.SocialView
-            android:orientation="horizontal" android:layout_width="match_parent"
-            android:divider="@drawable/social_view_divider"
-            android:showDividers="middle"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            app:speaker="@{speaker}">
-        <ImageView
-                android:id="@+id/facebook"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@drawable/ic_facebook"/>
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:divider="@drawable/social_view_divider"
+        android:showDividers="middle"
+        android:gravity="center"
+        android:layout_height="match_parent"
+        app:speaker="@{speaker}">
 
         <ImageView
-                android:id="@+id/twitter"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@drawable/ic_twitter"/>
+            android:id="@+id/facebook"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_facebook" />
 
         <ImageView
-                android:id="@+id/linkedin"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@drawable/ic_linkedin"/>
+            android:id="@+id/twitter"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_twitter" />
+
+        <ImageView
+            android:id="@+id/linkedin"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_linkedin" />
 
 
     </com.panoprogramowanie.boilingfrogs.ui.view.SocialView>
